fixed spacing bet columns

--- a/client/components/LandingF/LandingF.scss
+++ b/client/components/LandingF/LandingF.scss
@@ -49,7 +49,7 @@ $white: #ffffff;
 }
 
 .column3 {
-  margin-left: 120px;
+  margin-left: 75px;
   width: 131px;
 }
 //
